# Logan-geo-map-app

./: README.md  ROUTE_OPTIMIZATION.md  app.py  data_store.py  diagnose_business_ids.py  diagnose_business_ids_simple.py  diagnose_excel_detailed.py  diagnose_oos_data.py  diagnose_route.py  examine_excel.py  examine_excel_detailed.py  generate_test_data.py  google_maps_integration.py  list_excel_sheets.py  new_app.py  new_route_planner.py  pyproject.toml  requirements.txt  route_helpers.py  route_planner.py  station_manager.py  station_model.py  test_column_mapping.py  test_last_inspection.py  test_new_model.py  test_route_saving.py  test_station_statuses.py  test_view_route.py  travel_time_cache.pkl  travel_times.csv  update_station_route.py  your_station_data.xlsx
cache/: geocode_cache.pkl
data/: metadata.json  stations.json  stations.pkl
output/: latest_route.json  route_plan_20250914-214633.json  route_plan_20250915-205251.json  route_plan_20250915-210101.json  route_plan_20250915-212736.json  route_plan_20250915-213420.json  route_plan_20250915-213421.json
static/js/: station-edit.js  status-filter.js  table-sort.js
templates/: addresses.html  index.html  new_index.html  reset_confirmation.html  schedule.html
uploads/: your_station_data1.xlsx
