[project]
name = "logan-geo-map-app"
version = "0.1.0"
description = ""
authors = [
    {name = "nickball12",email = "nicholas.ball12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ortools (>=9.14.6206,<10.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-session (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
